--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/signatureDB
+MONGO_URI=mongodb+srv://tenzin:pass123@cluster0.hsx0wxb.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=SecretKey123
